# TER_HILBERT_CURVE

./: .gitignore  Affichage.py  CMakeLists.txt  GammaPointsGenerator.cpp  GammaPointsGenerator.h  HilbertCurve2D.cpp  HilbertCurve2D.h  HilbertCurve2D_Adaptive.cpp  HilbertCurve2D_Adaptive.h  HilbertCurve2D_Fixed.cpp  HilbertCurve2D_Fixed.h  HilbertTree.cpp  HilbertTree.h  PiecewiseConstantPointsGenerator.cpp  Point2D.cpp  Point2D.h  PointsGenerator.h  Quadrant.cpp  Quadrant.h  README.md  UniformPointsGenerator.cpp  exemple_openMP  main.cpp
pyHilbertCurve/: display.py  pyHilbertCurve.cp310-win_amd64.pyd
src/: HilbertCurveWrapper.cpp  main.cpp
src/HilbertCurve/: HilbertCurve2D.h  HilbertCurve2D_Adaptive.cpp  HilbertCurve2D_Adaptive.h  HilbertCurve2D_Fixed.h
src/Point2D/: Point2D.cpp  Point2D.h
src/PointsGenerators/: GammaPointsGenerator.cpp  GammaPointsGenerator.h  PiecewiseConstantPointsGenerator.cpp  PiecewiseConstantPointsGenerator.h  PointsGenerator.h  PointsGeneratorBuilder.cpp  PointsGeneratorBuilder.h  UniformPointsGenerator.cpp  UniformPointsGenerator.h
